--- a/styles.css
+++ b/styles.css
@@ -1324,9 +1324,57 @@ header {
   font-family: "Inter", sans-serif;
 }
 
-.whoarewe,
-.valuesMissionContainer,
-.paragraphs {
-  max-width: 100%;
+.statshead {
+   
+  font-family: "Oxanium", sans-serif;
+  font-size: 2rem;
+  color: #0f0339;
+  padding-top: 80px;
+}
+.stats {
   width: 100%;
+  height: 100%;
+}
+
+.statscontainer {
+  height: 180px;
+  background-color: #4c0135;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  border-radius: 100px;
+  margin-top: 40px;
+  gap: 90px;
+}
+
+.stats1 img{
+  position: relative;
+  top: 20px;
+
+}
+
+.stats1 p {
+  position: relative;
+  bottom: 70px;
+  font-family: "Oxanium", sans-serif;
+  font-size: 1rem;
+  color: #0f0339;
+  font-weight: 600;
+}
+
+.score {
+  font-size: 2rem;
+  color: #4c0135;
+  font-weight: 600;
+}
+
+.stats1 {
+  
+  background-color: #ffff;
+  border: 2px solid #0f0339;
+  border-radius: 48px;
+  height: 100px;
+  width: 200px;
+
 }
