--- a/styles.css
+++ b/styles.css
@@ -371,7 +371,8 @@ header {
 .aboutSection {
   position: relative;
   width: 100%;
-  height: 100%;
+  height: 410vh;
+  overflow: hidden;
 }
 
 .aboutContent {
@@ -402,12 +403,12 @@ header {
 
 .heading h1.pri {
   z-index: 2;
-  -webkit-text-stroke: 1px rgb(207, 36, 154, 15%);
+  -webkit-text-stroke: 1px rgb(207, 36, 154, 50%);
 }
 
 .heading h1.sec {
   z-index: 1;
-  -webkit-text-stroke: 1px rgb(41, 9, 159, 10%);
+  -webkit-text-stroke: 1px rgb(41, 9, 159, 20%);
 }
 
 .aboutBackground {
@@ -1253,7 +1254,7 @@ header {
   padding-top: 1%;
 }
 
-.testimonyheader{
+.testimonyheader {
   margin-bottom: 40px;
 }
 .testimessage {
@@ -1261,8 +1262,7 @@ header {
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  gap:30px
-  
+  gap: 30px;
 }
 
 .message {
@@ -1271,11 +1271,10 @@ header {
   width: 18rem;
   border-radius: 8px;
   font-size: 0.85rem;
-  
   margin-top: 1px;
   overflow: hidden;
 }
- 
+
 .message p {
   text-align: left;
   margin-top: -50px;
@@ -1303,8 +1302,9 @@ header {
   font-size: 200px;
   font-weight: 100;
 }
-.parents, .location{
-  text-align: center  !important;
+.parents,
+.location {
+  text-align: center !important;
 }
 
 .parents {
@@ -1325,7 +1325,6 @@ header {
 }
 
 .statshead {
-   
   font-family: "Oxanium", sans-serif;
   font-size: 2rem;
   color: #0f0339;
@@ -1348,15 +1347,14 @@ header {
   gap: 90px;
 }
 
-.stats1 img{
+.stats1 img {
   position: relative;
   top: 20px;
-
 }
 
 .stats1 p {
   position: relative;
-  bottom: 70px;
+  bottom: 60px;
   font-family: "Oxanium", sans-serif;
   font-size: 1rem;
   color: #0f0339;
@@ -1370,11 +1368,561 @@ header {
 }
 
 .stats1 {
-  
   background-color: #ffff;
   border: 2px solid #0f0339;
   border-radius: 48px;
   height: 100px;
   width: 200px;
+}
+
+/* ----------Programs-------------- */
+.programs {
+  position: relative;
+  width: 100%;
+  height: 250vh;
+  overflow: hidden;
+}
+.heading1 {
+  position: relative;
+  top: 40px;
+  color: transparent;
+  line-height: 4px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.5rem;
+  font-weight: 700;
+  font-family: "Outfit", sans-serif;
+  padding: 20px;
+}
+
+.heading1,
+.pri {
+  z-index: 2;
+  -webkit-text-stroke: 1px rgb(207, 36, 154, 50%);
+  color: transparent;
+}
+
+.heading1,
+.sec {
+  z-index: 1;
+  -webkit-text-stroke: 1px rgb(41, 9, 159, 20%);
+}
+
+.heading2 {
+  align-items: center;
+  justify-items: center;
+  padding-top: 80px;
+}
+
+.prognumber1 {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  border-radius: 20px;
+  font-size: 0.4rem;
+  font-family: "Outfit", sans-serif;
+  color: #0f0339;
+  background-color: rgb(181, 181, 181, 21%);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  height: 2rem;
+  width: 19rem;
+  font-weight: 200 !important;
+}
+
+.prognumber2 h1 {
+  position: relative;
+  font-family: "Outfit", sans-serif;
+  font-size: 2rem;
+  font-weight: 700;
+  color: #4c0135;
+}
+
+.programscontent p {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  top: 40px;
+  font-size: 1.25rem;
+  color: #740752;
+}
+.programscards {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  gap: 70px;
+  top: 65px;
+}
+
+.card {
+  height: 25.3rem;
+  width: 20rem;
+  background-color: #fff;
+  border: 1px solid rgba(15, 3, 57, 70%);
+  border-radius: 5px;
+  overflow: hidden;
+}
+
+.ecda {
+  width: 320px;
+  height: auto;
+  position: relative;
+  top: -30px;
+}
+
+.card {
+  background-color: #740752;
+}
+
+.card p {
+  font-size: 1rem;
+  color: #ffffff;
+  top: -10px;
+  left: 12.8px;
+  text-align: left;
+  width: 295px;
+  font-weight: 200;
+}
+
+.card h1 {
+  font-size: 1rem;
+  font-family: "Inter", sans-serif;
+  color: #0f0339;
+  position: relative;
+  left: 12.8px;
+  bottom: 20px;
+  text-align: left;
+  font-weight: 600;
+}
+
+.programsbuttons {
+  position: relative;
+  display: flex;
+  top: 5px;
+  gap: 50px;
+  left: 12.8px;
+}
+
+.programsbuttons button {
+  display: flex;
+  align-items: center;
+  gap: 6px;
+  padding: 5px 10px;
+  border-radius: 5px;
+  font-weight: 500;
+  font-family: "Inter", sans-serif;
+  font-size: 12px;
+  cursor: pointer;
+}
+
+.classenroll {
+  background-color: #0e023c;
+  border: none;
+  color: #fff;
+}
+
+.classenroll svg {
+  color: #fff;
+}
+
+.viewclass {
+  background-color: transparent;
+  border: 2px solid #0e023c;
+  color: #0f0339;
+}
+
+.whyuscards {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  gap: 20px;
+}
+
+.whyus {
+  margin-top: 120px;
+}
+
+.whyus h1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Inter", sans-serif;
+  font-family: 2rem;
+  font-weight: 600;
+  color: #0f0339;
+}
+
+.connectors {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+ 
+}
+
+.whycard {
+  height: 20rem;
+  width: 16rem;
+  background-color: #fff;
+  border: 1.5px solid rgba(162, 7, 82, 70%);
+  border-radius: 5px;
+  overflow: hidden;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.30);
+}
+
+.whycard p{
+  position: relative;
+  font-size: 1.25rem;
+  width: 13rem;
+  top: 30px;
+  color: #0e023c;
+}
+
+.whycard {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.whycard img {
+  width:4.5rem ;
+  height:auto ;
+}
+
+.image {
+  width:6rem ;
+  height:6rem ;
+  background-color: #4c0135;
+  border-radius: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  top: 10px;
+  position: relative;
+}
+
+.progtestimessage {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
+  margin-top: 80px;
+}
+
+ 
+
+.progtestimessage,.progmessage p {
+ font-size: 0.85rem;
+}
+
+.progmessage {
+  border: 2px solid #740752;
+  height: 11rem;
+  width: 18rem;
+  border-radius: 8px;
+  font-size: 0.85rem;
+  margin-top: 1px;
+  overflow: hidden;
+}
+
+.progmessage svg {
+  display: flex;
+  margin-top: 10px;
+  margin-left: 10px;
+  opacity: 100%;
+  color: #0f0339 !important;
+}
+
+.progmessage p {
+  text-align: left;
+  margin-top: -35px;
+  margin-left: 10px;
+  opacity: 70%;
+  color: #0f0339;
+ 
+}
+
+.progparents {
+  font-size: 1rem;
+  font-weight: 600;
+  color: #740752 !important;
+  opacity: 100% !important;
+  margin-top: 1px !important ;
+}
+
+.proglocation  {
+  font-size: 0.8rem;
+  font-weight: 500;
+  color: #0e023c !important;
+  opacity: 100% !important;
+  margin-top: 4px !important;
+  font-family: "Inter", sans-serif;
+}
+
+.progtestimonyheader {
+  font-family: "Oxanium", sans-serif;
+  font-size: 2rem !important;
+  font-weight: 400;
+  color: #0f0339 !important;
+  padding-top: 40px;
+}
+
+.link {
+  color: #0e023c !important;
+  font-size: 1rem;
+  font-weight: 400;
+  text-decoration: underline;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  top: 40px
+}
+
+/*-----------Registration form-----------------*/
+.regForm {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  backdrop-filter: blur(20px);
+  /* border: 1px solid rgb(0, 30, 60, 17%); */
+  margin-left: 72px ;
+  margin-right: 72px ;
+  margin-top: 4%;
+  border-radius: 15px;
+  background-color: #4c0135;
+  width: 50rem;
+  height: auto;
+}
+
+.registration{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #e6e6e6;
+  height: 112rem;
+}
+form {
+  margin-top: 2%;
+}
+
+#name, #surname {
+  border-radius: 5px;
+  padding: 7px 149px 7px 10px;
+  border: none;
+}
+
+#dateOfbirth, #options, #religion {
+  border-radius: 5px;
+  padding: 7px 169px 7px 10px;
+  border: none;
+}
+
+#birthRegNo {
+  border-radius: 5px;
+  padding: 7px 165px 7px 10px;
+  border: none;
+}
+
+#name, #surname,#dateOfbirth, #options, #birthRegNo, #religion,#health,#gauardianAddress,#kinAddress, #diet, #gauardian,#kin, #rank, #kinphoneNo,#phoneNo {
+  font-size: 0.8rem;
+  margin-top: 5px;
+  margin-bottom: 30px;
+  font-family: "Oxanium",sans-serif;
+}
+ 
+#health,#gauardianAddress,#kinAddress, #diet{
+  border-radius: 5px;
+  padding: 7px 460px 80px 10px;
+  border: none;
+}
+
+#gauardian,#kin,  #kinphoneNo,#phoneNo{
+  border-radius: 5px;
+  padding: 7px 145px 7px 10px;
+  border: none;
+}
+
+#rank{
+  border-radius: 5px;
+  padding: 7px 10px 7px 10px;
+  border: none;
+}
+
+label {
+  font-size: 1.25rem;
+  color: rgb(255, 255, 255, 70%);
+  font-family: "Oxanium",sans-serif;
+}
+
+
+.labelcontainer {
+  display: flex;
+  gap: 155px;
+}
+
+.inputcontainer {
+  display: flex;
+  gap: 10px;
+}
+
+.gender-religion {
+  display: flex;
+  gap: 200px;
+}
+
+.fistname_surname {
+  display: flex;
+   gap:170px;
+}
+
+.guardlabel {
+  display: flex;
+  gap:70px;
+}
+
+.kinlabel {
+  display: flex;
+  gap:80px;
+}
+
+.inputName_surname {
+  display: flex;
+  gap: 10px;
+}
+
+.religion {
+  display: flex;
+  gap: 10px;
+}
+
+.phone {
+  display: flex;
+  gap: 10px;
+}
+
+.enrollprog label {
+  position: relative;
+  padding-left:10px;
+}
+
+.fistname_surname label:first-child {
+  position: relative;
+  padding-left:10px;
+}
+ 
+.labelcontainer label:first-child{
+  position: relative;
+  padding-left:10px ;
+}
+
+.gender-religion label:first-child{
+  position: relative;
+  padding-left:10px ;
+}
+
+.rankfamily label:first-child {
+  position: relative;
+  padding-left:10px ;
+}
+
+.health label:first-child{
+  position: relative;
+  padding-left:10px ;
+}
+
+.diet label:first-child{
+  position: relative;
+  padding-left:10px ;
+}
+
+.guardlabel label:first-child{
+  position: relative;
+  padding-left:10px ;
+}
+
+.kinlabel  label:first-child{
+  position: relative;
+  padding-left:10px ;
+}
+
+.guardianAddress  label {
+  position: relative;
+  padding-left:10px ;
+}
+
+.kinAddress label {
+  position: relative;
+  padding-left:10px;
+}
+
+#options {
+  margin-top: 5px;
+}
+
+.formbuttons {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  font-size: 1rem;
+  font-family: "Oxanium",sans-serif;
+}
+
+.clear, .submit {
+  background-color: #4c0135;
+  padding: 15px 167px;
+  border: none;
+  border-radius: 48px;
+  margin-top: 25px;
+  font-size: 1.25rem;
+  font-family: "Oxanium",sans-serif;
+  color: #ffff;
+  font-weight: 400;
+}
+
+.enrollmentHeading {
+  margin-top: -100px !important;
+}
+
+/*------------------gallery----------------- */
+.gallery {
 
 }
+
+.learning{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-content: center;
+  gap: 200px;
+}
+
+.graduates {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-content: center;
+  gap: 10px;
+}
+ 
+ 
+ 
+
+
+ 
+
+ 
