--- a/styles.css
+++ b/styles.css
@@ -220,35 +220,8 @@ hr {
 }
 
 /* Hamburger Menu */
-.hamburger {
-  display: none;
-  flex-direction: column;
-  gap: 5px;
-  cursor: pointer;
-  position: absolute;
-  right: 20px;
-  top: 20px;
-  z-index: 1000;
-}
 
-.hamburger span {
-  width: 25px;
-  height: 3px;
-  background-color: #0f0339;
-  transition: all 0.3s ease;
-}
 
-.hamburger.active span:nth-child(1) {
-  transform: rotate(45deg) translate(5px, 5px);
-}
-
-.hamburger.active span:nth-child(2) {
-  opacity: 0;
-}
-
-.hamburger.active span:nth-child(3) {
-  transform: rotate(-45deg) translate(7px, -6px);
-}
 
 /* Home Section */
 .homeSection {
@@ -409,8 +382,30 @@ hr {
 }
 
 /* Responsive Design */
+@container (max-width: 600px) {
+  .icon,
+  .numbers,
+  .workingHours,
+  .days {
+    display: none;
+  }
 
- 
+  .topSection {
+    justify-content: center;
+    align-items: center;
+  }
+
+  .logo {
+    align-items: center;
+    justify-content: center;
+  }
+
+  .logo h1 {
+    text-align: center;
+    margin: 0 auto;
+  }
+}
+
 @container (max-width: 1024px) {
   .colorText {
     font-size: 12px;
@@ -420,7 +415,7 @@ hr {
     padding: 12px 15px;
   }
 
-  .workingHours{
+  .workingHours {
     font-size: 12px;
   }
   .days {
@@ -436,7 +431,6 @@ hr {
   .leftContent {
     flex-direction: column;
   }
-
 
   .logo h1 {
     font-size: 1.25rem;
@@ -458,14 +452,10 @@ hr {
 }
 
 @media (max-width: 768px) {
- 
   .ribbon {
     display: none;
   }
 
-  .hamburger {
-    display: none;
-  }
 
   .navLinks {
     position: fixed;
@@ -514,7 +504,7 @@ hr {
   }
 
   .herotext {
-    font-size: 1.2rem;
+    font-size: 1.5rem;
   }
 
   .hero-buttons {
@@ -540,11 +530,23 @@ hr {
 }
 
 @media (max-width: 480px) {
+  .logo h1 {
+    font-size: 1rem;
+    font-weight: 700;
+    color: #0f0339;
+    letter-spacing: 5px;
+    white-space: nowrap;
+    display: flex;
+    align-items: center;
+  }
   .homeImage3 {
     display: none;
   }
 
-  .leftContent, .rightContent {
+  .icon,
+  .numbers,
+  .workingHours,
+  .days {
     display: none;
   }
 
@@ -569,14 +571,7 @@ hr {
   }
 
   .hero-buttons {
-    flex-direction: column;
-    width: 100%;
-    align-items: center;
-  }
-
-  .hero-buttons button {
-    width: 90%;
-    max-width: 300px;
+    margin-bottom: 100px;
   }
 }
 /* --------------------------------------------------------- */
