--- a/styles.css
+++ b/styles.css
@@ -165,9 +165,6 @@ hr {
 }
 
 /* navbar */
-.botton-nav{
-
-}
 .navLinks ul {
   display: flex;
   gap: 70px;
@@ -182,6 +179,7 @@ hr {
   z-index: 1000; /* ensure it stays above all content */
   background-color:rgba(255, 255, 255, 0.5); /* important so content doesn't show through */
   backdrop-filter: blur(20px);
+  border-radius: 30px;
 }
 
 .navLinks {
@@ -296,6 +294,9 @@ hr {
   overflow: hidden;
 }
 
+.homeSection a{
+  text-decoration: none;
+}
 .bagroundImages {
   overflow: hidden;
 }
@@ -2832,6 +2833,11 @@ textarea {
 
 .Designercolor {
   color: #4c0135 !important;
+}
+
+.nav-links a{
+  text-decoration: none;
+  color: white;
 }
 
 /* ===== Responsive Design ===== */
