--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ header {
   background-color: #fff;
   overflow: visible;
   container-type: inline-size;
-  z-index: 100
+  z-index: 100;
 }
 
 /* to of navbar */
@@ -137,7 +137,7 @@ hr {
   opacity: 15%;
 }
 @container (max-width: 1024px) {
-  .leftContent,
+  .icon, .numbers,
   .rightContent {
     display: none;
   }
@@ -164,57 +164,182 @@ hr {
   }
 }
 
-/* navbar */
-.navLinks ul {
-  display: flex;
-  gap: 70px;
-  list-style: none;
-  margin: 0;
-  padding: 8px 25px;
-}
+/* Navigation Bar Styles */
 .botton-nav {
-  position: fixed;
-  top: 90px;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
   width: 100%;
-  z-index: 1000; /* ensure it stays above all content */
-  background-color:rgba(255, 255, 255, 0.5); /* important so content doesn't show through */
-  backdrop-filter: blur(20px);
-  border-radius: 30px;
 }
 
 .navLinks {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 15px 150px;
+  padding: 1.25rem 3rem;
+  background: rgba(255, 255, 255, 0.12);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
+#nav-list {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  gap: 2rem;
+  align-items: center;
+}
 
-.navLinks a {
+#nav-list li {
+  margin: 0;
+}
+
+.nav-item {
+  color: #4c0135;
   text-decoration: none;
-  color: #740752;
-  font-size: 16px;
-  font-family: "Inter", sans-serif;
+  font-size: 1rem;
   font-weight: 500;
-  z-index: 11;
+  padding: 0.5rem 1rem;
+  border-radius: 8px;
+  transition: all 0.3s ease;
   position: relative;
 }
 
-.nav-links :active {
+.nav-item:hover {
+  color: #0f0339;
+}
+
+.nav-item.active {
   color: #fff;
+  background: #0f0339;
+  font-weight: 600;
 }
 
-.line {
-  width: 1170px;
-  height: 1px;
-  left: 10px;
-  top: -5px;
-  background-color: #74075127;
-  margin: 0 auto;
+.nav-buttons {
+  display: flex;
+  gap: 1rem;
+}
+
+.nav-buttons a {
+  text-decoration: none;
+}
+
+.nav-buttons button {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  padding: 0.75rem 1.5rem;
+  border: none;
+  border-radius: 50px;
+  font-size: 1rem;
+  font-weight: 600;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.nav-buttons button svg {
+  width: 20px;
+  height: 20px;
+  transition: transform 0.3s ease;
+}
+
+.enroll:hover svg {
+  transform: rotate(-10deg);
+}
+.contact:hover svg {
+  transform: translate(2px, -2px);
+}
+
+.nav-buttons button:active {
+  transform: translateY(0);
+}
+
+/* Hamburger Menu */
+.hamburger {
+  display: none;
+  flex-direction: column;
   position: relative;
-  z-index: 3;
+  gap: 6px;
+  cursor: pointer;
+  padding: 10px;
+  z-index: 1001;
+  left: 50px;
+  transition: all 0.3s ease;
 }
 
+.hamburger span {
+  width: 30px;
+  height: 3px;
+  background: #0f0339;
+  border-radius: 3px;
+  transition: all 0.3s ease;
+}
+
+.hamburger.active span:nth-child(1) {
+  transform: rotate(45deg) translate(8px, 8px);
+}
+
+.hamburger.active span:nth-child(2) {
+  opacity: 0;
+}
+
+.hamburger.active span:nth-child(3) {
+  transform: rotate(-45deg) translate(8px, -8px);
+}
+/* Responsive Design */
+
+/* Responsive Design */
+@media (max-width: 768px) {
+  .hamburger {
+    display: flex;
+    position: relative; 
+    right:50px;
+    margin: 0;
+    top: 8px;
+  }
+
+  .icon {
+    display: flex;
+    position: relative; 
+    right:50px;
+    top: 1px;
+  }
+
+  .navLinks {
+    flex-direction: column;
+    padding: 1rem;
+    gap: 1rem;
+  }
+
+  #nav-list {
+    flex-direction: column;
+    gap: 0.5rem;
+    width: 100%;
+  }
+
+  #nav-list li {
+    width: 100%;
+    text-align: center;
+  }
+
+  .nav-item {
+    display: block;
+    width: 100%;
+  }
+
+  .nav-buttons {
+    width: 100%;
+    justify-content: center;
+  }
+
+  .nav-buttons button {
+    flex: 1;
+    justify-content: center;
+  }
+}
 .enroll {
   display: flex;
 }
@@ -261,28 +386,9 @@ hr {
   border: none;
 }
 
-.ribbon {
-  position: absolute;
-  top: 81px;
-  z-index: 10;
-  transform: translateX(72px);
-  transition: left 0.3s ease, width 0.3s ease;
-  overflow: visible;
-  pointer-events: none;
-  height: 85px;
-  min-width: 78px;
-}
-
-.ribbon svg {
-  width: 100%;
-  height: 100%;
-  display: block;
-  overflow: visible;
-}
 #nav-list {
   position: relative;
 }
-
 
 /* Hamburger Menu */
 
@@ -294,7 +400,7 @@ hr {
   overflow: hidden;
 }
 
-.homeSection a{
+.homeSection a {
   text-decoration: none;
 }
 .bagroundImages {
@@ -526,7 +632,6 @@ hr {
     font-weight: 500;
     position: relative;
     transition: color 0.3s ease;
-   
   }
 
   .navLinks ul {
@@ -546,7 +651,6 @@ hr {
     transition: all 0.3s ease;
     white-space: no-wrap;
   }
-
 }
 
 @media (max-width: 768px) {
@@ -627,6 +731,7 @@ hr {
 }
 
 @media (max-width: 480px) {
+  
   .logo h1 {
     font-size: 1rem;
     font-weight: 700;
@@ -679,7 +784,6 @@ hr {
   background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%);
 }
 
- 
 .heading {
   text-align: center;
   margin-bottom: 40px;
@@ -696,7 +800,7 @@ hr {
 }
 
 .heading .pri::after {
-  content: '';
+  content: "";
   position: absolute;
   bottom: -5px;
   left: 50%;
@@ -712,17 +816,19 @@ hr {
   margin: 0 auto;
 }
 
-.whoarewe, .ourjourney {
+.whoarewe,
+.ourjourney {
   background: white;
   padding: 40px;
   margin-bottom: 40px;
   border-radius: 12px;
-  box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   word-wrap: break-word;
   overflow-wrap: break-word;
 }
 
-.whoarewe h1, .ourjourney h1 {
+.whoarewe h1,
+.ourjourney h1 {
   color: #0f0339;
   opacity: 90%;
   font-size: 1.5rem;
@@ -828,14 +934,16 @@ hr {
   gap: 30px;
 }
 
-.coreValuesContainer, .mottoContainer {
+.coreValuesContainer,
+.mottoContainer {
   background: white;
   padding: 30px;
   border-radius: 12px;
-  box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-.corevaluesHeader h1, .mottoHeader h1 {
+.corevaluesHeader h1,
+.mottoHeader h1 {
   color: #740752;
   font-size: 1.5rem;
   text-transform: uppercase;
@@ -843,13 +951,15 @@ hr {
   font-weight: 600;
 }
 
-.coreValues, .motto {
+.coreValues,
+.motto {
   display: flex;
   flex-wrap: wrap;
   gap: 15px;
 }
 
-.coreValues > div, .motto > div {
+.coreValues > div,
+.motto > div {
   background: linear-gradient(0deg, #740752 80%, #a0095f 100%);
   color: white;
   border: solid 2px #0f0339;
@@ -859,7 +969,8 @@ hr {
   transition: transform 0.3s;
 }
 
-.coreValues > div:hover, .motto > div:hover {
+.coreValues > div:hover,
+.motto > div:hover {
   transform: scale(1.05);
 }
 
@@ -867,19 +978,20 @@ hr {
   background: white;
   padding: 40px;
   border-radius: 12px;
-  box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   text-align: center;
 }
 
-.visionContent svg, .missionicon svg {
+.visionContent svg,
+.missionicon svg {
   color: #0f0339;
   margin: 20px 0;
 }
 
-.visionContent, .missionicon{
+.visionContent,
+.missionicon {
   background-color: #4c0135;
   border-radius: 100px;
-  
 }
 
 .missionStateVision h1 {
@@ -890,12 +1002,14 @@ hr {
   font-weight: 600;
 }
 
-.visionText, .paragraphs {
+.visionText,
+.paragraphs {
   text-align: left;
   margin: 20px 0;
 }
 
-.visionText p, .paragraphs p {
+.visionText p,
+.paragraphs p {
   color: #0f0339;
   opacity: 80%;
   margin-bottom: 15px;
@@ -907,7 +1021,7 @@ hr {
   padding: 35px;
   margin-bottom: 40px;
   border-radius: 12px;
-  box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   text-align: center;
 }
 
@@ -935,7 +1049,7 @@ hr {
 
 .members > div:hover {
   transform: translateY(-10px);
-  box-shadow: 0 8px 15px rgba(0,0,0,0.2);
+  box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
 }
 
 .members img {
@@ -962,13 +1076,12 @@ hr {
   font-weight: 500;
 }
 
-
 .testimonials {
   background: white;
   padding: 40px;
   margin-bottom: 40px;
   border-radius: 12px;
-  box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .testimonyheader {
@@ -1035,8 +1148,7 @@ hr {
   gap: 30px;
   text-align: center;
 }
- 
- 
+
 .members {
   display: flex;
   flex-direction: row;
@@ -1045,7 +1157,6 @@ hr {
   gap: 100px;
   flex-wrap: wrap;
 }
-
 
 .text {
   padding-bottom: 20px;
@@ -1078,7 +1189,6 @@ hr {
   width: 250px;
   height: 300px;
 }
-
 
 .testimonyheader {
   margin-bottom: 40px;
@@ -1305,7 +1415,7 @@ hr {
 
   .meet,
   .testimonyheader {
-    font-size: 0.5rem;
+    font-size: 1.25rem;
     white-space: nowrap;
     font-weight: 400;
   }
@@ -1319,7 +1429,7 @@ hr {
   }
 
   .testimonials {
-    padding-top:30px;
+    padding-top: 30px;
     padding-bottom: 50px;
     padding-left: 20px;
     padding-right: 20px;
@@ -1332,7 +1442,7 @@ hr {
   .message {
     padding: auto;
   }
- 
+
   .stats1 {
     background-color: #ffff;
     border: 2px solid #0f0339;
@@ -1351,12 +1461,12 @@ hr {
     gap: 0px;
   }
 
-  .stats{
-   display: flex;
-   flex-direction: column;
-   justify-items: center;
-   align-items:center ;
-   padding: 20px 40px;
+  .stats {
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    align-items: center;
+    padding: 20px 40px;
   }
 
   .score {
@@ -1379,10 +1489,7 @@ hr {
     width: 40%;
     height: auto;
   }
-
 }
-
-
 
 /* ----------Programs-------------- */
 .programs {
@@ -1439,7 +1546,7 @@ hr {
   border-radius: 12px;
   padding: 0;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
-  box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
   overflow: hidden;
@@ -1560,7 +1667,6 @@ hr {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 60px;
- 
 }
 
 .whyus {
@@ -1571,7 +1677,7 @@ hr {
   padding: 60px;
   margin-bottom: 60px;
   border-radius: 12px;
-  box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .whyus h1 {
@@ -1603,9 +1709,9 @@ hr {
   transition: transform 0.3s;
 }
 
-.whycard:hover{
+.whycard:hover {
   transform: translateY(-10px);
-  box-shadow: 0 8px 15px rgba(0,0,0,0.2);
+  box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
 }
 
 .whycard p {
@@ -1648,7 +1754,7 @@ hr {
   padding: 40px;
   margin-bottom: 40px;
   border-radius: 12px;
-  box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .progtestimessage {
@@ -1865,7 +1971,7 @@ hr {
 
 .icon {
   width: 2rem;
-  height: 2rem;
+  height: 3rem;
   flex-shrink: 0;
   margin-top: 0.25rem;
 }
@@ -1928,19 +2034,19 @@ hr {
 
 @media (max-width: 768px) {
   body {
-      padding: 1rem;
+    padding: 1rem;
   }
 
   .page-title h1 {
-      font-size: 2rem;
+    font-size: 2rem;
   }
 
   .hero h2 {
-      font-size: 2rem;
+    font-size: 2rem;
   }
 
   .info-grid {
-      grid-template-columns: 1fr;
+    grid-template-columns: 1fr;
   }
 }
 
@@ -2100,7 +2206,7 @@ select {
   padding: 40px;
   margin-bottom: 40px;
   border-radius: 12px;
-  box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .gallerytHeading {
@@ -2279,7 +2385,7 @@ select {
 .learn::after,
 .graduate::after,
 .activity::after {
-  content: '🔍';
+  content: "🔍";
   position: absolute;
   top: 50%;
   left: 50%;
@@ -2580,8 +2686,7 @@ form textarea {
 }
 
 /* ===== Main Container ===== */
-.contact-section
-{
+.contact-section {
   background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%);
   padding: 40px 40px;
   height: auto;
@@ -2625,10 +2730,10 @@ form textarea {
 }
 
 .info-item span.icon {
-  width: 34px;
-  height: 34px;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
-  background: rgba(255, 255, 255, 0.15);
+  background: #4c0135;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -2835,7 +2940,7 @@ textarea {
   color: #4c0135 !important;
 }
 
-.nav-links a{
+.nav-links a {
   text-decoration: none;
   color: white;
 }
